--- a/array-transformer/array-transformer.vcxproj
+++ b/array-transformer/array-transformer.vcxproj
@@ -136,6 +136,8 @@
     <ClCompile Include="src\TheeVectorIntersector.cpp" />
     <ClCompile Include="src\TwoVectorIntersector.cpp" />
     <ClCompile Include="src\VectorSorter.cpp" />
+    <ClInclude Include="include\ArrayFileStream.hpp" />
+    <ClInclude Include="include\ArrayFileBuf.hpp" />
     <ClInclude Include="include\ArrayTransformerFactory.hpp" />
     <ClInclude Include="include\Printer.hpp" />
     <ClInclude Include="include\ReverseOrderedThreeVecDifference.hpp" />
@@ -145,6 +147,11 @@
     <ClInclude Include="include\ThreeVectorIntersector.hpp" />
     <ClInclude Include="include\VectorSorter.hpp" />
     <ClInclude Include="include\ArrayTransformer.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="content\test.txt">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
+    </CopyFileToFolders>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
