--- a/array-transformer/array-transformer.vcxproj.filters
+++ b/array-transformer/array-transformer.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="include\ArgumentParser.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\defs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="content\small.txt" />
